# destroybg

./: .gitignore  dk.mble.destroybg.json  main.py  pyproject.toml  requirements.txt  setup.py
data/resources/: style.css
src/: app.py  logic.py  main.py  window.py  window.ui
src/ui/: window.ui
ui/: window.ui
