[tool.poetry]
name = "remove-background"
version = "0.1.0"
description = ""
authors = ["mbledkowski <pub@mble.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
torchvision = "^0.18.1"
pillow = "^10.3.0"
numpy = "^2.0.0"
scikit-image = "^0.24.0"
huggingface-hub = "^0.23.4"
transformers = "^4.41.2"
pycairo = "^1.26.1"
pygobject = "^3.48.2"
pygobject-stubs = "^2.11.0"
gitpython = "^3.1.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
